# citations

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  citations.doap  meson.build  meson_options.txt
build-aux/: org.gnome.World.Citations.Devel.json
cratebibtex/: Cargo.toml
cratebibtex/src/: bib.rs  entry.rs  entry_type.rs  format.rs  lib.rs
data/: meson.build  org.gnome.World.Citations.desktop.in.in  org.gnome.World.Citations.gschema.xml.in  org.gnome.World.Citations.metainfo.xml.in.in
data/resources/: resources.gresource.xml  style.css
data/resources/ui/: add_pdf_dialog.ui  citation_preview.ui  entry_list.ui  entry_list_row.ui  entry_page.ui  new_entry_dialog.ui  shortcuts.ui  window.ui
po/: LINGUAS  POTFILES.in  be.po  bg.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ka.po  kab.po  nb.po  nl.po  oc.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po
src/: add_pdf_dialog.rs  application.rs  citation_preview.rs  entry_list.rs  entry_list_row.rs  entry_page.rs  main.rs  meson.build  new_entry_dialog.rs  selection.rs  utils.rs  window.rs
