[package]
name = "cratebibtex"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
gettext-rs.workspace = true
gio = "0.20"
glib = { version = "0.20", features = ["v2_72"] }
log.workspace = true
nom-bibtex = "0.5"
regex = "1.7"
